js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
label
:
{
new
import
.
source
(
'
<
module
source
>
'
)
;
}
;
